# tallinn-tech-legislation-parser

./: .gitignore  .vimrc  LICENSE  Makefile  README.md  arg_parsing.c  command_line.c  command_line.h  comp_dbu.c  comp_dbu.h  doing_business.c  doing_business.h  leg-dbu.c  leg-print.c  leg.c  legislation.c  legislation.h  meson.build  misc.c  misc.h  print_leg.c  print_leg.h  printing.c  printing.h  safe_string.c  safe_string.h  schema.sql  sections.c  sections.h  text_parser.c  text_parser.h  util.c  util.h  vectors.h  web.c  web.h
c_src/: arg_parsing.c  arg_parsing.h  command_line.c  command_line.h  comp_dbu.c  convert_csv.c  convert_csv.h  dao.c  dao.h  database.c  database.h  doing_business.c  doing_business.h  error.c  error.h  estonia.c  estonia.h  files.c  files.h  leg.c  leg_feed.c  leg_feed.h  legal_act.c  legal_act.h  legislation.c  legislation.h  main.c  maps.c  maps.h  meson.build  misc.c  misc.h  print_leg.c  print_leg.h  printing.c  printing.h  results_dao.c  results_dao.h  safe_string.c  safe_string.h  (+16 more)
py_src/: andres_kyt_complexity.py  main.py
r_project/: main.R  meson.build
r_src/: dao.r  doing_business.r  dtf.r  main.r  topological_structure.r
